fixed a dang overflow issue on mobile MQ

--- a/css/styles.css
+++ b/css/styles.css
@@ -328,5 +328,7 @@ footer a:hover {
 
   #sidenav.expanded {
     width: 40%;
+    overflow: visible;
   }
+
 }
